test/tests/stages/13_floating-point_numbers/valid/floating_expressions/simple.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 2.000000
                      None: 
                    None: 
                  Double: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CBinary: 
                    CMultiply: 
                    CVar: 
                      TIdentifier: x
                      None: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 2.000000
                      None: 
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 4.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
